DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2004-10-21 patrickh     Fixed the macros in config/pkgs so that tests can now
                        be disallowed using the --without-<pkg> option variant.
                        NEW VERSION: 1.99.16
2004-03-01 patrickh     Renamed the variable $_EXTRA_FLAGS variable in abi.m4
                        to the more meaningful $ABI_FLAGS.
                        NEW VERSION: 1.99.15
2003-11-23 patrickh     Fully synchronized with RELENG_1_5.
                        NEW VERSION: 1.99.14
2003-11-23 patrickh     Added support for generating Python code from IDL.
2003-11-23 patrickh     Added a "warning level" feature for compiling with
                        different degrees of strictness.
2003-06-10 patrickh     Changed the command-line arguments --with-awroot,
                        --with-paroot, --with-synroot, and --with-glutroot to
                        --with-audioworks, --with-portaudio, --with-subsynth,
                        and --with-glut respectively.
                        NEW VERSION: 1.99.12
2003-05-23 patrickh     Merged the compiler warning level features from
                        RELENG_1_5.
                        NEW VERSION: 1.99.11
2003-01-25 patrickh     Changed the command-line arguments --with-oglroot and
                        --with-oalroot to --with-opengl and --with-openal
                        respectively.
                        NEW VERSION: 1.99.10
2002-12-02 patrickh     Added macros for determining which linker to use and if
                        that linker is GNU ld.
                        NEW VERSION: 1.99.9
2002-12-02 patrickh     Swapped the order of the first two arguments to
                        DPP_HAVE_CPPUNIT.
                        Added the new macro DPP_CHECK_DYNLAOD_LIB.
                        NEW VERSION: 1.99.8
2002-11-27 patrickh     Rewrote the CppUnit detection macro.  The command-line